Changing attribution and info links.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 				<span id='refreshstatus'></span><span id='timeTillNext'></span>
 			</div>		
 			<div id='linkswrapper'>
-			<a href="http://www.oliverobrien.co.uk/">Blog</a> - <a href="javascript:alert('Data: TFL website map. Map data: OpenStreetMap contributors, including OS Open Data. Hosting: UCL. Powered by Mapnik and OpenLayers. Thanks to BorisBikes forum contributors, Steven Gray at UCL CASA and Aidan Slingsby at City GICentre. This mashup was produced by Oliver O\'Brien at UCL CASA. Map is CC-By-SA OpenStreetMap. ')">Attributions</a> - <a href="javascript:alert('Data is updated automatically every two minutes from TfL. Bike usage is simultaneous usage and includes cycle redistribution. Actual total usage across the day is much higher. Distribution imbalance - the number of cycles that would need to be moved to a different stand, in order for all stands to be the same % full. Higher numbers indicate a more unbalanced distribution, e.g. many bikes in the centre, few on the edge. This website may be subject to interruption.')">Notes</a> - <a href="http://twitter.com/oobr/">Twitter: @oobr</a> - <a href="javascript:alert('You can contact me via Twitter or by emailing me at: mail (@) oliverobrien.co.uk')">Contact</a>
+			<a href="http://www.oliverobrien.co.uk/">Based on Original Work by Oliver O'Brien</a> - 
+      <a href="javascript:alert('Data: NiceRideMN website map. Map data: CC-By-SA OpenStreetMap contributors. Powered by Mapnik and OpenLayers.')">Attributions</a> - 
+      <a href="javascript:alert('Data is updated automatically every two minutes from NiceRideMN. Bike usage is simultaneous usage and includes cycle redistribution. Actual total usage across the day is much higher. Distribution imbalance - the number of cycles that would need to be moved to a different stand, in order for all stands to be the same % full. Higher numbers indicate a more unbalanced distribution, e.g. many bikes in the centre, few on the edge. This website may be subject to interruption.')">Notes</a> - 
+      <a href="http://twitter.com/iandees/">Twitter: @iandees</a> - 
+      <a href="javascript:alert('You can contact me via Twitter or by emailing me at: ian.dees (@) gmail.com')">Contact</a>
 			</div>
 		</div>
 	</div>
